# clara-chgfe-software

./: .gitignore  Cargo.toml  Dockerfile  build.ps1  build.sh  build_remote.sh
app/: Dockerfile  app.py  settings.py
src/: debug_terminal.rs  main.rs  settings.rs  tcpip.rs  uart.rs
