[package]
name = "cgfe4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.11.0"
text_io = "0.1.12"
ctrlc = "3.2.4"
anyhow = "1.0.39"
crossbeam = "0.8.2"
serde_json = "1.0.91"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install --assume-yes libudev-dev:arm64"]